# prez

./: .gitignore  .ruff.toml  CLAUDE.md  README.md  hello.py  moon.yml  pyproject.toml
.github/workflows/: ci.yml
.moon/: workspace.yml
examples/: demo.py  markdown_demo.py  sample_presentation.md
src/prez/: __init__.py  __main__.py  core.py  markdown.py  templates.py
tests/: test_core.py  test_markdown.py  test_templates.py
